--- a/Views/Cafe/Edit.cshtml
+++ b/Views/Cafe/Edit.cshtml
@@ -1,48 +1,53 @@
-﻿@model humber_http_5226_collaborative_project.Models.CafeDto
+﻿@model humber_http_5226_collaborative_project.Models.ViewModels.UpdateCafe
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Cafe";
+    //Layout = "~/Views/Shared/_Layout.cshtml"; (Add layout??)
 }
 
-<h2>Update Cafe</h2>
-<form action="/Cafe/Update/@Model.CafeId" method="POST">
-    <div>
-        <input type="text" name="CafeId" value="@Model.CafeId" />
-    </div>
-    <div>
-        <label>Name:</label> 
-        <input type="text" id="Name" name="Name" value="@Model.Name" />
-    </div>
-    <div>
-        <label>Address:</label> 
-        <input type="text" id="Address" name="Address" value="@Model.Address" required/>
-    </div>
-    <div>
-        <label>OverpassId:</label> 
-        <input type="text" id="OverpassId" name="OverpassId" value="@Model.OverpassId" required/>
-    </div>
-    <div>
-        <label>Latitude:</label> 
-        <input type="text" id="Latitude" name="Latitude" value="@Model.Latitude" required/>
-    </div>
-    <div>
-        <label>Longitude:</label> 
-        <input type="text" id="Longitude" name="Longitude" value="@Model.Longitude" required/>
-    </div>
-    <div>
-        <label>Phone:</label> 
-        <input type="text" id="Phone" name="Phone" value="@Model.Phone" />
-    </div>
-    <div>
-        <label>Description:</label> 
-        <input type="text" id="Description" name="Description" value="@Model.Description" />
-    </div>
-    <div>
-        <label>Website:</label> 
-        <input type="text" id="Website" name="Website" value="@Model.Website" />
-    </div>
-    <div>
-        <input type="submit" value="Update Cafe" />
+<h2>Edit Cafe</h2>
+
+@using (Html.BeginForm("Update", "Cafe", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
+    @Html.AntiForgeryToken()
+
+    @Html.HiddenFor(model => model.SelectedCafe.CafeId)
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.SelectedCafe.Name, new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.SelectedCafe.Name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.SelectedCafe.Name, "", new { @class = "text-danger" })
+        </div>
     </div>
 
-</form>
+    <div class="form-group">
+        @Html.LabelFor(model => model.SelectedCafe.Address, new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.SelectedCafe.Address, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.SelectedCafe.Address, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.SelectedCafe.Phone, new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.SelectedCafe.Phone, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.SelectedCafe.Phone, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.SelectedCafe.Website, new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.SelectedCafe.Website, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.SelectedCafe.Website, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Update" class="btn btn-default" />
+        </div>
+    </div>
+}
