--- a/Views/Cafe/New.cshtml
+++ b/Views/Cafe/New.cshtml
@@ -1,45 +1,50 @@
-﻿
+﻿@model humber_http_5226_collaborative_project.Models.CafeDto
+
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create New Cafe";
+    //Layout = "~/Views/Shared/_Layout.cshtml"; (add layout file??)
 }
 
-<h2>Create Cafe</h2>
-<form action="/Cafe/Create" method="POST">
-  
-    <div>
-        <label>Name:</label> 
-        <input type="text" id="Name" name="Name" required/>
-    </div>
-    <div>
-        <label>Address:</label> 
-        <input type="text" id="Address" name="Address" required/>
-    </div>
-    <div>
-        <label>OverpassId:</label> 
-        <input type="text" id="OverpassId" name="OverpassId" required/>
-    </div>
-    <div>
-        <label>Latitude:</label> 
-        <input type="text" id="Latitude" name="Latitude" required/>
-    </div>
-    <div>
-        <label>Longitude:</label> 
-        <input type="text" id="Longitude" name="Longitude" required/>
-    </div>
-    <div>
-        <label>Phone:</label> 
-        <input type="text" id="Phone" name="Phone" />
-    </div>
-    <div>
-        <label>Description:</label> 
-        <input type="text" id="Description" name="Description" />
-    </div>
-    <div>
-        <label>Website:</label> 
-        <input type="text" id="Website" name="Website" />
-    </div>
-    <div>
-        <input type="submit" value="Add Cafe" />
+<h2>@ViewBag.Title</h2>
+
+@using (Html.BeginForm("Create", "Cafe", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+        </div>
     </div>
 
-</form>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Website, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Website, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Website, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-default" />
+        </div>
+    </div>
+}
