--- a/Views/Item/Details.cshtml
+++ b/Views/Item/Details.cshtml
@@ -1,27 +1,29 @@
 ﻿@model humber_http_5226_collaborative_project.Models.ItemDto
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Item Details";
+    //Layout = "~/Views/Shared/_Layout.cshtml"; (add layout file??)
 }
 
-<a href="/Item/List">Go back to list</a>
+<h2>@ViewBag.Title</h2>
 
-<h1>@Model.Name</h1>
-<div>@Model.Description</div>
-<div>@Model.Price</div>
-<a href="~/Views/Item/Details.cshtml">~/Views/Item/Details.cshtml</a>
-<h2>Available at: </h2>
-<ul>
-    @foreach (var cafe in Model.CafesWithThisItem)
-    {
-        <li>
-            <h3><a href="/Cafe/Details/@cafe.CafeId">@cafe.Name</a></h3>
-        </li>
-    }
-</ul>
+<div class="details-panel">
+    <dl class="dl-horizontal">
+        <dt>Name</dt>
+        <dd>@Html.DisplayFor(model => model.Name)</dd>
 
-<a href="/Item/Edit/@Model.ItemId">Update</a>
-<a href="/Item/DeleteConfirm/@Model.ItemId">Delete</a>
-<h2>@Model.Name</h2>
+        <dt>Description</dt>
+        <dd>@Html.DisplayFor(model => model.Description)</dd>
+
+        <dt>Price</dt>
+        <dd>$@Html.DisplayFor(model => model.Price)</dd>
+    </dl>
+
+    <div class="buttons">
+        @Html.ActionLink("Edit", "Edit", new { id = Model.ItemId }, new { @class = "btn btn-primary" })
+        @Html.ActionLink("Delete", "DeleteConfirm", new { id = Model.ItemId }, new { @class = "btn btn-danger" })
+    </div>
+</div>
+
 
 
