--- a/Views/Item/Edit.cshtml
+++ b/Views/Item/Edit.cshtml
@@ -1,29 +1,47 @@
-﻿@model humber_http_5226_collaborative_project.Models.ItemDto
+﻿@model humber_http_5226_collaborative_project.Models.viewmodel.DetailsItem
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Item";
+    //Layout = "~/Views/Shared/_Layout.cshtml"; (add layout file??)
 }
 
-<h2>Update Item</h2>
-<form action="/Item/Update/@Model.ItemId" method="POST">
-    <div>
-        @* Pass through the Item ID *@
-        <input type="text" name="ItemId" value="@Model.ItemId" />
+<h2>Edit Item</h2>
+
+@using (Html.BeginForm("Update", "Item", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
+    @Html.AntiForgeryToken()
+
+    @Html.HiddenFor(model => model.SelectedItem.ItemId)
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.SelectedItem.Name, new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.SelectedItem.Name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.SelectedItem.Name, "", new { @class = "text-danger" })
+        </div>
     </div>
-    <div>
-        <label>Name:</label> 
-        <input type="text" id="ItemName" name="ItemName" value="@Model.Name" />
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.SelectedItem.Description, new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.SelectedItem.Description, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.SelectedItem.Description, "", new { @class = "text-danger" })
+        </div>
     </div>
-    <div>
-        <label>Description:</label> 
-        <input type="text" id="ItemDescription" name="ItemDescription" value="@Model.Description" />
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.SelectedItem.Price, new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.SelectedItem.Price, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01" } })
+            @Html.ValidationMessageFor(model => model.SelectedItem.Price, "", new { @class = "text-danger" })
+        </div>
     </div>
-    <div>
-        <label>Price:</label> 
-        <input type="text" id="ItemPrice" name="ItemPrice" value="@Model.Price" />
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Save" class="btn btn-default" />
+        </div>
     </div>
-    <div>
-        <input type="submit" value="Update Item" />
-    </div>
-</form>
+}
+
 
