Added authorization and fixed some views not working

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                     <li>@Html.ActionLink("Items", "List", "Item", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Orders", "List", "Order", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Couriers", "List", "CourierLicense", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("OrderItems", "List", "OrderItems", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("OrderItems", "List", "OrderItem", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
                  @Html.Partial("_LoginPartial")
             </div>
